--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "dependencies": {
         "@babel/preset-env": "^7.24.7",
         "@babel/preset-react": "^7.24.7",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/icons-material": "^5.15.21",
+        "@mui/material": "^5.15.21",
+        "@mui/styles": "^5.15.21",
+        "axios": "^1.7.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
@@ -23,13 +29,14 @@
         "@vitejs/plugin-react": "^4.3.1",
         "babel-jest": "^29.7.0",
         "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-react": "^7.34.2",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
-        "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "prettier": "^3.3.2",
         "stylelint": "^16.6.1",
+        "stylelint-config-prettier": "^9.0.5",
         "vite": "^5.3.1"
     }
 }
